--- a/Src/Web/Web.csproj
+++ b/Src/Web/Web.csproj
@@ -14,6 +14,7 @@
     <AssemblyName>MvcAndBackbone</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
+    <UseIISExpress>false</UseIISExpress>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -119,8 +120,12 @@
     <Content Include="App_Data\combres_full_with_annotation.xml" />
     <Content Include="App_Readme\glimpse.mvc3.readme.txt" />
     <Content Include="App_Readme\glimpse.readme.txt" />
+    <Content Include="Content\App.css">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>App.scss</DependentUpon>
+    </Content>
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
     <Content Include="Content\themes\base\jquery-ui.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
@@ -195,6 +200,10 @@
   <ItemGroup>
     <Content Include="Areas\Accounts\Views\UserSession\Edit.cshtml" />
     <None Include="combres.readme" />
+    <None Include="Content\App.scss">
+      <Generator>ScssGenerator</Generator>
+      <LastGenOutput>App.css</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
